# machineries

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
machineries/: __init__.py  machine.py  main.py
